--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <artifactId>parachutes-annotations</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Add dependencies for PDF generation with iText -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
     </dependencies>
 
 </project>
